--- a/application_filler/application_filler.ipynb
+++ b/application_filler/application_filler.ipynb
@@ -2,36 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "application_filler – application_filler.ipynb\n",
-      "Obtain Active window using Python - Stack Overflow — Яндекс Браузер\n"
-     ]
-    }
-   ],
+   "execution_count": 18,
+   "outputs": [],
    "source": [
     "#Импорт библиотек\n",
     "from transliterate import translit\n",
-    "from win32gui import GetWindowText, GetForegroundWindow\n",
-    "import win32com.client\n",
     "import pyautogui\n",
-    "#import random\n",
+    "import pyperclip\n",
+    "##import random\n",
     "\n",
     "class text_inst():\n",
-    "    #Функция поиска первого числа в строке\n",
+    "    #Метод поиска первого числа в строке\n",
     "    def number_pos(self, string):\n",
     "        for i, c in enumerate(string):\n",
     "            if c.isdigit():\n",
     "                return i\n",
     "                break\n",
+    "    #Метод вставки текста в поле\n",
+    "    def field_paste(self, field):\n",
+    "        pyperclip.copy(field)\n",
+    "        pyperclip.paste()\n",
     "text = text_inst()\n",
     "\n",
     "class key_inst():\n",
-    "    #Функция повторения нажатия клавиш\n",
+    "    #Метод повторения нажатия клавиш\n",
     "    def cycle(self, count, key):\n",
     "        for i in range(count):\n",
     "            pyautogui.press(key)\n",
@@ -56,7 +50,7 @@
     "        strings.append(string)\n",
     "\n",
     "#Формирование текстовых полей для заполнения\n",
-    "#symbols = ['!', '#', '$', '%', '+', '&', '@']\n",
+    "##symbols = ['!', '#', '$', '%', '+', '&', '@']\n",
     "for k, string in enumerate(strings):\n",
     "    string =  string[50:]\n",
     "    date_start = text.number_pos(string)\n",
@@ -71,25 +65,49 @@
     "    login = login_base + '-' + login_init1 + login_init2\n",
     "\n",
     "    #Формирование пароля\n",
-    "    #random_num = random.randint(1000,9999)\n",
-    "    #random_symbol = random.choice(symbols)\n",
-    "    #password = login_base.capitalize() + str(random_num) + random_symbol\n",
+    "    ##random_num = random.randint(1000,9999)\n",
+    "    ##random_symbol = random.choice(symbols)\n",
+    "    ##password = login_base.capitalize() + str(random_num) + random_symbol\n",
     "    password = 'Zaq123456&'\n",
     "\n",
     "    #Заполнение формы\n",
-    "    print (GetWindowText(GetForegroundWindow()))\n",
+    "    window = pyautogui.getWindowsWithTitle(\"Active Directory - пользователи и компьютеры\")\n",
+    "    window[0].activate()\n",
     "    if k == 0:\n",
-    "        key.cycle(200, 'up')\n",
+    "        key.cycle(10, 'left')\n",
+    "        pyautogui.press('right')\n",
     "        key.cycle(2, 'down')\n",
-    "        pyautogui.press('clear')\n",
-    "        pyautogui.press('add')\n",
+    "        pyautogui.press('right')\n",
     "        key.cycle(17, 'down')\n",
-    "        pyautogui.press('add')\n",
+    "        pyautogui.press('right')\n",
     "        key.cycle(9, 'down')\n",
     "        pyautogui.hotkey('shift', 'f10')\n",
     "        key.cycle(4, 'down')\n",
-    "        key.cycle(2, 'enter')"
+    "        key.cycle(2, 'enter')\n",
+    "    window = pyautogui.getWindowsWithTitle(\"Новый объект - Пользователь\")\n",
+    "    window[0].activate()\n"
    ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "outputs": [],
+   "source": [
+    "window = pyautogui.getWindowsWithTitle(\"Новый объект - Пользователь\")\n",
+    "window[0].activate()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false
    }
