--- a/application_filler/application_filler.ipynb
+++ b/application_filler/application_filler.ipynb
@@ -2,13 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 25,
    "outputs": [],
    "source": [
     "#Импорт библиотек\n",
     "from transliterate import translit\n",
+    "import win32com.client\n",
     "import pyautogui\n",
     "import pyperclip\n",
+    "import time\n",
     "##import random\n",
     "\n",
     "class text_inst():\n",
@@ -21,7 +23,7 @@
     "    #Метод вставки текста в поле\n",
     "    def field_paste(self, field):\n",
     "        pyperclip.copy(field)\n",
-    "        pyperclip.paste()\n",
+    "        pyautogui.hotkey('ctrl', 'v')\n",
     "text = text_inst()\n",
     "\n",
     "class key_inst():\n",
@@ -38,10 +40,11 @@
     "inbox = mapi.GetDefaultFolder(6)\n",
     "messages = inbox.Items\n",
     "messages.Sort(\"[ReceivedTime]\", True)\n",
+    "subject = 'В ответственность Вашей команды назначена заявка'\n",
     "for message in messages:\n",
     "    if (message.UnRead) and \\\n",
-    "    ((message.subject.startswith(\"FW: В ответственность Вашей команды назначена заявка\")) or \\\n",
-    "    (message.subject.startswith(\"В ответственность Вашей команды назначена заявка\"))) and \\\n",
+    "    ((message.subject.startswith('FW: ' + subject)) or \\\n",
+    "    (message.subject.startswith(subject))) and \\\n",
     "    (message.body.find('ПРИЕМ НА РАБОТУ') > -1):\n",
     "        string_pos_start = message.body.find('ФИО')\n",
     "        string = message.body[string_pos_start::]\n",
@@ -56,7 +59,6 @@
     "    date_start = text.number_pos(string)\n",
     "    fio = string[:date_start]\n",
     "    surname, name, patronymic = fio.split()\n",
-    "    birth = string[len(string)-10::]\n",
     "\n",
     "    #Формирование логина\n",
     "    login_base = translit(surname, 'ru',  reversed=True).lower()\n",
@@ -70,9 +72,11 @@
     "    ##password = login_base.capitalize() + str(random_num) + random_symbol\n",
     "    password = 'Zaq123456&'\n",
     "\n",
-    "    #Заполнение формы\n",
+    "    #Активация окна активной директории\n",
     "    window = pyautogui.getWindowsWithTitle(\"Active Directory - пользователи и компьютеры\")\n",
     "    window[0].activate()\n",
+    "\n",
+    "    #Открытие формы\n",
     "    if k == 0:\n",
     "        key.cycle(10, 'left')\n",
     "        pyautogui.press('right')\n",
@@ -84,30 +88,38 @@
     "        pyautogui.hotkey('shift', 'f10')\n",
     "        key.cycle(4, 'down')\n",
     "        key.cycle(2, 'enter')\n",
+    "    else:\n",
+    "        pyautogui.hotkey('shift', 'f10')\n",
+    "        key.cycle(4, 'down')\n",
+    "        key.cycle(2, 'enter')\n",
+    "\n",
+    "    #Заполнение формы\n",
+    "    time.sleep(2)\n",
     "    window = pyautogui.getWindowsWithTitle(\"Новый объект - Пользователь\")\n",
-    "    window[0].activate()\n"
+    "    window[0].activate()\n",
+    "    text.field_paste(name)\n",
+    "    pyautogui.press('tab')\n",
+    "    text.field_paste(name[0])\n",
+    "    text.field_paste(patronymic[0])\n",
+    "    pyautogui.press('tab')\n",
+    "    text.field_paste(surname)\n",
+    "    pyautogui.press('tab')\n",
+    "    pyautogui.press('del')\n",
+    "    text.field_paste(name)\n",
+    "    text.field_paste(' ')\n",
+    "    text.field_paste(surname)\n",
+    "    text.field_paste(' ')\n",
+    "    text.field_paste(patronymic)\n",
+    "    pyautogui.press('tab')\n",
+    "    text.field_paste(login)\n",
+    "    key.cycle(4, 'tab')\n",
+    "    pyautogui.press('enter')\n",
+    "    text.field_paste(password)\n",
+    "    pyautogui.press('tab')\n",
+    "    text.field_paste(password)\n",
+    "    key.cycle(7, 'tab')\n",
+    "    key.cycle(6, 'enter')"
    ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "outputs": [],
-   "source": [
-    "window = pyautogui.getWindowsWithTitle(\"Новый объект - Пользователь\")\n",
-    "window[0].activate()"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
    "metadata": {
     "collapsed": false
    }
