--- a/json_collapsible/json_converter.ipynb
+++ b/json_collapsible/json_converter.ipynb
@@ -2,21 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 148,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "                        project decomposition_1  \\\n0    УВВ-08-0403-22 от 28.02.22                   \n1                                Этапы договора   \n2                                                 \n3                                                 \n4                                                 \n..                          ...             ...   \n354                                               \n355                                               \n356                                               \n357                                               \n358                                               \n\n                                                 stage  decomposition_2  \\\n0                                                                         \n1                                                                         \n2    01 Развитие сервисов Портала для потребителей ...                    \n3                                                       Документооборот   \n4                                                                         \n..                                                 ...              ...   \n354                                                                       \n355                                                                       \n356                                                                       \n357                                                                       \n358                                                                       \n\n                                       decomposition_3 task duration_function  \\\n0                                                                               \n1                                                                               \n2                                                                               \n3                                                                               \n4    01. Отчетные документы (Описание технических р...                          \n..                                                 ...  ...               ...   \n354  4.1.2.3 МЛК. Требования к защите от ошибочных ...                          \n355                4.1.2.4 Требования к режимам работы                          \n356  4.1.8.1 Общие требования к информационной безо...                          \n357  4.1.8.2 МЛК. Частное техническое задание на по...                          \n358  4.1.8.3 МЛК. Требования по защите персональных...                          \n\n    finish_function role_function start_function  \n0                                                 \n1                                                 \n2                                                 \n3                                                 \n4                                                 \n..              ...           ...            ...  \n354                                               \n355                                               \n356                                               \n357                                               \n358                                               \n\n[359 rows x 10 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>project</th>\n      <th>decomposition_1</th>\n      <th>stage</th>\n      <th>decomposition_2</th>\n      <th>decomposition_3</th>\n      <th>task</th>\n      <th>duration_function</th>\n      <th>finish_function</th>\n      <th>role_function</th>\n      <th>start_function</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>УВВ-08-0403-22 от 28.02.22</td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td></td>\n      <td>Этапы договора</td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td></td>\n      <td></td>\n      <td>01 Развитие сервисов Портала для потребителей ...</td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td>Документооборот</td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td>01. Отчетные документы (Описание технических р...</td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>354</th>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td>4.1.2.3 МЛК. Требования к защите от ошибочных ...</td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n    </tr>\n    <tr>\n      <th>355</th>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td>4.1.2.4 Требования к режимам работы</td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n    </tr>\n    <tr>\n      <th>356</th>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td>4.1.8.1 Общие требования к информационной безо...</td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n    </tr>\n    <tr>\n      <th>357</th>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td>4.1.8.2 МЛК. Частное техническое задание на по...</td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n    </tr>\n    <tr>\n      <th>358</th>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td>4.1.8.3 МЛК. Требования по защите персональных...</td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n    </tr>\n  </tbody>\n</table>\n<p>359 rows × 10 columns</p>\n</div>"
-     },
-     "execution_count": 148,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": 94,
+   "outputs": [],
    "source": [
     "#Библиотеки\n",
     "import pandas as pd\n",
@@ -32,6 +19,19 @@
     "    new = new.str[0:n]\n",
     "    new = new.apply(lambda x: ' '.join(x))\n",
     "    return new\n",
+    "\n",
+    "class html_formatter():\n",
+    "    def expandable(self, n, word, row):\n",
+    "        row_append = f'<tr class=\"level{n}\">' \\\n",
+    "                     f'<td onclick=\"level_{n}\">{word}' \\\n",
+    "                     f'</td>' \\\n",
+    "                     f'<td>{row[0]}</td>' \\\n",
+    "                     f'<td>{row[1]}</td>' \\\n",
+    "                     f'<td>{row[2]}</td>' \\\n",
+    "                     f'<td>{row[3]}</td>' \\\n",
+    "                     f'</tr>'\n",
+    "        return row_append\n",
+    "html_formatter = html_formatter()\n",
     "\n",
     "#Открытие json\n",
     "with open('./data.json') as fp:\n",
@@ -127,14 +127,72 @@
     "                          values = col_order[6:],\n",
     "                          aggfunc ='sum')\n",
     "pivot = pivot[~pivot.index.duplicated(keep='first')]\n",
+    "pivot = pivot[['duration_function', 'role_function',\n",
+    "               'start_function', 'finish_function']]\n",
+    "pivot['role_function'] = np.where((pivot['role_function'] == ' ') &\n",
+    "                                  (pivot['start_function'] != ' '),\n",
+    "                      '-',\n",
+    "                      pivot['role_function'])\n",
     "\n",
     "#Сброс индекса\n",
     "pivot.to_excel('./data.xlsx')\n",
     "pivot = pd.read_excel('./data.xlsx').replace(np.nan, ' ')\n",
     "os.remove('./data.xlsx')\n",
     "\n",
-    "#html-конвертация\n"
-   ]
+    "#Добавление отступов\n",
+    "expands = list(pivot.columns)[:6]\n",
+    "for k, col in enumerate(expands):\n",
+    "    pivot[col] = np.where(pivot[col] == ' ',\n",
+    "                                        ' ',\n",
+    "                                        '__'*k + pivot[col].astype(str))\n",
+    "#html-конвертация\n",
+    "header = '<html> ' \\\n",
+    "         '<header> ' \\\n",
+    "         '</header> ' \\\n",
+    "         '<style>' \\\n",
+    "         'table, tr, td, th {' \\\n",
+    "         'border: 1px solid black;' \\\n",
+    "         'border-collapse:collapse;' \\\n",
+    "         'border-color: gray;' \\\n",
+    "         '}' \\\n",
+    "         '</style>' \\\n",
+    "         '<body>' \\\n",
+    "         '<table border=\"0\">' \\\n",
+    "         '<thead>' \\\n",
+    "         '<tr>' \\\n",
+    "         '<th colspan=\"5\">Этапы и задачи</th>' \\\n",
+    "         '</tr>' \\\n",
+    "         '</thead>' \\\n",
+    "         '<tbody>'\n",
+    "footer = '</tbody>' \\\n",
+    "         '</table>' \\\n",
+    "         '<script src=\"./action.js\" type=\"text/javascript\"></script>'\\\n",
+    "         '</body>' \\\n",
+    "         '</html>'\n",
+    "body = ''\n",
+    "length = pivot.shape[0]\n",
+    "for i in range(length):\n",
+    "   row_ = list(pivot.iloc[i, :])\n",
+    "   for k, pos in enumerate(row_):\n",
+    "       if pos!= ' ':\n",
+    "           level = k + 1\n",
+    "           break;\n",
+    "   title = [x for x in row_ if x.isspace() == False]\n",
+    "   if (level != 6) & (len(title) == 1):\n",
+    "       row = [' ']*(5-len(title))\n",
+    "   else:\n",
+    "       row = title[1:] + [' ']*(5-len(title))\n",
+    "       title = [title[0]]\n",
+    "   body += html_formatter.expandable(level, title[0], row)\n",
+    "   html_doc = header + body + footer\n",
+    "\n",
+    "#Формирование html-таблицы\n",
+    "with open('./table.html', 'w', newline='', encoding=\"utf-8\") as file:\n",
+    "    file.write(html_doc)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
