--- a/json_collapsible/json_converter.ipynb
+++ b/json_collapsible/json_converter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "#Библиотеки\n",
@@ -21,9 +21,11 @@
     "    return new\n",
     "\n",
     "class html_formatter():\n",
-    "    def expandable(self, n, word, row):\n",
-    "        row_append = f'<tr class=\"level{n}\">' \\\n",
-    "                     f'<td onclick=\"level_{n}\">{word}' \\\n",
+    "    def expandable(self, level, title, row, parent, expand, style, collapse):\n",
+    "        row_append = f'<tr class=\"treegrid-{level}{parent} {expand}\" id=\"node-1-1\" style=\"{style}\">' \\\n",
+    "                     f'<td>' \\\n",
+    "                     f'<span {collapse} </span>'\\\n",
+    "                     f'{title}' \\\n",
     "                     f'</td>' \\\n",
     "                     f'<td>{row[0]}</td>' \\\n",
     "                     f'<td>{row[1]}</td>' \\\n",
@@ -146,27 +148,51 @@
     "                                        ' ',\n",
     "                                        '__'*k + pivot[col].astype(str))\n",
     "#html-конвертация\n",
-    "header = '<html> ' \\\n",
-    "         '<header> ' \\\n",
-    "         '</header> ' \\\n",
-    "         '<style>' \\\n",
-    "         'table, tr, td, th {' \\\n",
-    "         'border: 1px solid black;' \\\n",
-    "         'border-collapse:collapse;' \\\n",
-    "         'border-color: gray;' \\\n",
-    "         '}' \\\n",
-    "         '</style>' \\\n",
-    "         '<body>' \\\n",
-    "         '<table border=\"0\">' \\\n",
-    "         '<thead>' \\\n",
-    "         '<tr>' \\\n",
-    "         '<th colspan=\"5\">Этапы и задачи</th>' \\\n",
-    "         '</tr>' \\\n",
-    "         '</thead>' \\\n",
-    "         '<tbody>'\n",
-    "footer = '</tbody>' \\\n",
+    "header = '<!doctype html>' \\\n",
+    "         '<html>' \\\n",
+    "         '<head>' \\\n",
+    "         '<meta charset=\"utf-8\">' \\\n",
+    "         '<title>Расписание</title>' \\\n",
+    "         '<link rel=\"stylesheet\" href=\"jquery.treegrid.css\">' \\\n",
+    "         '</head>' \\\n",
+    "         '<body style>' \\\n",
+    "         '<table>'\\\n",
+    "         '<tbody>'\\\n",
+    "         '<tr>'\\\n",
+    "         '<td>'\\\n",
+    "         '<table id=\"tree-1\" border=\"1\" cellpadding=\"0\" cellspacing=\"0\">' \\\n",
+    "         '<tbody>' \\\n",
+    "         '<tr id=\"tree-head-1\">' \\\n",
+    "         f'<th>Иерархия</th>' \\\n",
+    "         f'<th>{list(pivot.columns)[6]}</th>' \\\n",
+    "         f'<th>{list(pivot.columns)[7]}</th>' \\\n",
+    "         f'<th>{list(pivot.columns)[8]}</th>' \\\n",
+    "         f'<th>{list(pivot.columns)[9]}</th>' \\\n",
+    "         '</tr>'\n",
+    "footer = '</tbody>'\\\n",
     "         '</table>' \\\n",
-    "         '<script src=\"./action.js\" type=\"text/javascript\"></script>'\\\n",
+    "         '</td>'\\\n",
+    "         '</tr>'\\\n",
+    "         '</tbody>'\\\n",
+    "         '</table>'\\\n",
+    "         '<script src=\"http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js\"></script>'\\\n",
+    "         '<script src=\"jquery.treegrid.min.js\"></script>'\\\n",
+    "         '<script src=\"jquery.cookie.js\"></script>'\\\n",
+    "         '<script src=\"test.js\"></script>'\\\n",
+    "         '<script>'\\\n",
+    "            'var globalCounter = 0;'\\\n",
+    "            'var saveStateName = \"state-save-4\";'\\\n",
+    "            '$(\"#tree-1\").treegrid({initialState: \"collapsed\"});'\\\n",
+    "            '$(\"#tree-2\").treegrid({treeColumn: 1, initialState: \"expanded\", \"saveState\": true, \"saveStateName\": saveStateName});'\\\n",
+    "            '$(\"#tree-3\").treegrid({initialState: \"collapsed\"});'\\\n",
+    "            '$(\"#tree-4\").treegrid({onChange: function() {'\\\n",
+    "                    'globalCounter++;'\\\n",
+    "                '}, onCollapse: function() {'\\\n",
+    "                    'globalCounter++;'\\\n",
+    "                '}, onExpand: function() {'\\\n",
+    "                    'globalCounter++;'\\\n",
+    "                '}});'\\\n",
+    "         '</script>'\\\n",
     "         '</body>' \\\n",
     "         '</html>'\n",
     "body = ''\n",
@@ -183,7 +209,19 @@
     "   else:\n",
     "       row = title[1:] + [' ']*(5-len(title))\n",
     "       title = [title[0]]\n",
-    "   body += html_formatter.expandable(level, title[0], row)\n",
+    "   if level == 1:\n",
+    "       parent = ''\n",
+    "       expand = 'treegrid-collapsed'\n",
+    "       style=''\n",
+    "       collapse = 'class=\"treegrid-expander treegrid-expander-collapsed\">'\n",
+    "   else:\n",
+    "       parent = f' treegrid-parent-{level-1}'\n",
+    "       expand = 'treegrid-expanded'\n",
+    "       style = 'display: none;'\n",
+    "       collapse = 'class=\"treegrid-expander treegrid-expander-expanded\">'\n",
+    "   body += html_formatter.expandable(level, title[0], row,\n",
+    "                                     parent, expand, style,\n",
+    "                                     collapse)\n",
     "   html_doc = header + body + footer\n",
     "\n",
     "#Формирование html-таблицы\n",
