--- a/json_collapsible/json_converter.ipynb
+++ b/json_collapsible/json_converter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 39,
    "outputs": [],
    "source": [
     "#Библиотеки\n",
@@ -21,8 +21,8 @@
     "    return new\n",
     "\n",
     "class html_formatter():\n",
-    "    def expandable(self, level, title, row, parent, expand, style, collapse):\n",
-    "        row_append = f'<tr class=\"treegrid-{level}{parent} {expand}\" id=\"node-1-1\" style=\"{style}\">' \\\n",
+    "    def expandable(self, grandparent, title, row, parent, expand, ids, style, collapse):\n",
+    "        row_append = f'<tr class=\"treegrid-{grandparent}{parent}{expand}\" id=\"{ids}\" {style}>' \\\n",
     "                     f'<td>' \\\n",
     "                     f'<span {collapse} </span>'\\\n",
     "                     f'{title}' \\\n",
@@ -153,14 +153,14 @@
     "         '<head>' \\\n",
     "         '<meta charset=\"utf-8\">' \\\n",
     "         '<title>Расписание</title>' \\\n",
-    "         '<link rel=\"stylesheet\" href=\"jquery.treegrid.css\">' \\\n",
+    "         '<link rel=\"stylesheet\" href=\"resource/jquery.treegrid.css\">' \\\n",
     "         '</head>' \\\n",
     "         '<body style>' \\\n",
     "         '<table>'\\\n",
     "         '<tbody>'\\\n",
     "         '<tr>'\\\n",
     "         '<td>'\\\n",
-    "         '<table id=\"tree-1\" border=\"1\" cellpadding=\"0\" cellspacing=\"0\">' \\\n",
+    "         '<table id=\"tree-1\" border=\"1\">' \\\n",
     "         '<tbody>' \\\n",
     "         '<tr id=\"tree-head-1\">' \\\n",
     "         f'<th>Иерархия</th>' \\\n",
@@ -176,28 +176,21 @@
     "         '</tbody>'\\\n",
     "         '</table>'\\\n",
     "         '<script src=\"http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js\"></script>'\\\n",
-    "         '<script src=\"jquery.treegrid.min.js\"></script>'\\\n",
-    "         '<script src=\"jquery.cookie.js\"></script>'\\\n",
-    "         '<script src=\"test.js\"></script>'\\\n",
+    "         '<script src=\"resource/jquery.treegrid.js\"></script>'\\\n",
     "         '<script>'\\\n",
-    "            'var globalCounter = 0;'\\\n",
-    "            'var saveStateName = \"state-save-4\";'\\\n",
     "            '$(\"#tree-1\").treegrid({initialState: \"collapsed\"});'\\\n",
-    "            '$(\"#tree-2\").treegrid({treeColumn: 1, initialState: \"expanded\", \"saveState\": true, \"saveStateName\": saveStateName});'\\\n",
-    "            '$(\"#tree-3\").treegrid({initialState: \"collapsed\"});'\\\n",
-    "            '$(\"#tree-4\").treegrid({onChange: function() {'\\\n",
-    "                    'globalCounter++;'\\\n",
-    "                '}, onCollapse: function() {'\\\n",
-    "                    'globalCounter++;'\\\n",
-    "                '}, onExpand: function() {'\\\n",
-    "                    'globalCounter++;'\\\n",
-    "                '}});'\\\n",
     "         '</script>'\\\n",
     "         '</body>' \\\n",
     "         '</html>'\n",
     "body = ''\n",
     "length = pivot.shape[0]\n",
+    "level_memory = {\n",
+    "                0: 0, 1: 0, 2: 0,\n",
+    "                3: 0, 4: 0, 5: 0\n",
+    "               }\n",
     "for i in range(length):\n",
+    "   grandparent = i + 1\n",
+    "   #формирование строки таблицы\n",
     "   row_ = list(pivot.iloc[i, :])\n",
     "   for k, pos in enumerate(row_):\n",
     "       if pos!= ' ':\n",
@@ -209,25 +202,89 @@
     "   else:\n",
     "       row = title[1:] + [' ']*(5-len(title))\n",
     "       title = [title[0]]\n",
-    "   if level == 1:\n",
-    "       parent = ''\n",
-    "       expand = 'treegrid-collapsed'\n",
-    "       style=''\n",
-    "       collapse = 'class=\"treegrid-expander treegrid-expander-collapsed\">'\n",
+    "   #проверка уровня следующей строки таблицы\n",
+    "   if i + 1 != length:\n",
+    "        row_next_ = list(pivot.iloc[i+1, :])\n",
+    "        for k_next, pos_next in enumerate(row_next_):\n",
+    "           if pos_next != ' ':\n",
+    "               level_next = k_next + 1\n",
+    "               break;\n",
     "   else:\n",
-    "       parent = f' treegrid-parent-{level-1}'\n",
-    "       expand = 'treegrid-expanded'\n",
-    "       style = 'display: none;'\n",
-    "       collapse = 'class=\"treegrid-expander treegrid-expander-expanded\">'\n",
-    "   body += html_formatter.expandable(level, title[0], row,\n",
-    "                                     parent, expand, style,\n",
+    "        level_next = level\n",
+    "   #упорядочивание элементов разворачивания\n",
+    "   if level_next <= level:\n",
+    "      expand = ''\n",
+    "      collapse = 'class=\"treegrid-expander\">'\n",
+    "      #формирование зависимостей разворачивания\n",
+    "      parent = f' treegrid-parent-{previous}'\n",
+    "   else:\n",
+    "       level_count = title[0].count('__')\n",
+    "       expand = ' treegrid-collapsed'\n",
+    "       collapse = 'class=\"treegrid-expander treegrid-expander-collapsed\">'\n",
+    "       #формирование зависимостей разворачивания\n",
+    "       if level_count == 0:\n",
+    "           parent = f' treegrid-parent-{grandparent}'\n",
+    "       else:\n",
+    "           parent = f' treegrid-parent-{level_memory[level_count-1]}'\n",
+    "       level_memory[level_count] = grandparent\n",
+    "       previous = grandparent\n",
+    "   #установка свойств разворачивания\n",
+    "   if level == 1:\n",
+    "       style=''\n",
+    "       parent = ''\n",
+    "   else:\n",
+    "       style = 'style=\"display: none;\"'\n",
+    "   ids = grandparent - 1\n",
+    "   #добавление строк в таблицу\n",
+    "   body += html_formatter.expandable(grandparent, title[0], row,\n",
+    "                                     parent, expand, ids, style,\n",
     "                                     collapse)\n",
-    "   html_doc = header + body + footer\n",
+    "#формирование полной таблицы\n",
+    "html_doc = header + body + footer\n",
     "\n",
     "#Формирование html-таблицы\n",
     "with open('./table.html', 'w', newline='', encoding=\"utf-8\") as file:\n",
     "    file.write(html_doc)"
    ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "5"
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ui ='__________dlksjfdsj'\n",
+    "ui.count('__')"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "{0: 0, 1: 0, 2: 0, 3: 0, 4: 0, 5: 100}"
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [],
    "metadata": {
     "collapsed": false
    }
